--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 </head>
 <body>
     <h1>My new website</h1>
+    <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum voluptates obcaecati exercitationem debitis tenetur nihil? Id facilis dolores impedit quae.</p>
+    
 </body>
 </html>
