--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My first website</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <h1>My new website</h1>
     <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptatum voluptates obcaecati exercitationem debitis tenetur nihil? Id facilis dolores impedit quae.</p>
-    
+    <h3>How are you</h3>
+
 </body>
 </html>
